--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ MAX_INPUT_MAX_NEW_TOKENS=2048
 DEFAULT_MAX_NEW_TOKENS=1024
 MAX_INPUT_TOKEN_LENGTH=4000
 
+# PRETRAINED_LIB=avx2 # for cpu use
+
+PRETRAINED_GPU_LAYERS=110  # for gpu use (110 for 7b, 130 for 13b)
